--- a/Analyzer/test/texPlot/stack_plots.tex
+++ b/Analyzer/test/texPlot/stack_plots.tex
@@ -24,7 +24,7 @@
 \def\Orchid{\color{Orchid}}
 \definecolor{DodgerBlueDark}{HTML}{1873cc}
 
-\title{Data vs MC Stack Plots: MadGraph TTBar, BTag and Lepton scale factors, and MC trigger}
+\title{Data vs MC Stack Plots: Powheg TTBar, BTag and Lepton scale factors, and MC trigger}
 
 \author{\textcolor{Green}{\bf C.~Madrid\inst{1}}}
 %\author{\textcolor{DodgerBlueDark}{\bf C.~Madrid\inst{1}}}
